merge to 0.26.0; failed to compile